# ros2_humble_mediapipe

./: README.md
ros2_mediapipe/: package.xml  setup.cfg  setup.py
ros2_mediapipe/launch/: MediaPipe_Hands_launch.py
ros2_mediapipe/ros2_mediapipe/: mediapipe_hands.py
ros2_mediapipe/rviz2/: MediaPipe_Hands_launch.py  rviz_config.rviz
ros2_mediapipe_msgs/: CMakeLists.txt  package.xml
ros2_mediapipe_msgs/msg/: MediapipeHands.msg
