<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

    <name>ros2_mediapipe_msgs</name>
    <version>0.1.0</version>
    <description>ros2_mediapipe_msgs</description>

    <maintainer email="marcoteixeira@utfpr.edu.br">Marco Teixeira</maintainer>
    <license>BSD</license>


    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <depend>std_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
